--- a/release/release.org
+++ b/release/release.org
@@ -70,11 +70,8 @@
   + [-] improve READMEs
     + [X] diagrams
     + [ ] diagrams-cairo
-  + [ ] send patches
-    + [ ] diagrams-postscript
-    + [ ] diagrams-tikz
-    + [ ] hs-logo
-    + [ ] diagrams-canvas
+  + [X] send patches
+    + [X] diagrams-tikz
   + [ ] split out gtk backend into separate package
   + [X] finish porting doc build system to shake
   + [X] add to contributing page: documentation, CHANGES
@@ -84,6 +81,10 @@
     + [X] add "closable" to list of type classes
     + [ ] add "types" section
     + [ ] other updates as needed
+  + [ ] move stuff like withName, named, etc. into diagrams-lib
+  + [ ] add boundaryFrom or something like that?
+  + [ ] set up test/comparison framework
+  + [ ] fix some SVG issues -- maybe even finish it
   + [ ] build API docs
   + [-] update CHANGES files and release info on website
     + [X] diagrams-core
@@ -94,7 +95,6 @@
     + [ ] website
   + [ ] 0.5 -> 0.6 migration page on wiki
   + [ ] test build:
-    - [ ] ghc 6.12.3
     - [ ] ghc 7.0.4
     - [ ] ghc 7.2.1
     - [ ] ghc 7.4.2
