add a couple todos to release checklist [ci skip]

--- a/release/release.org
+++ b/release/release.org
@@ -70,6 +70,8 @@
   + [-] improve READMEs
     + [X] diagrams
     + [ ] diagrams-cairo
+  + [ ] improve diagrams-cairo documentation
+  + [ ] finish updating diagrams-core documentation (see XXX's etc.)
   + [X] send patches
     + [X] diagrams-tikz
   + [ ] split out gtk backend into separate package
