final draft of HCAR submission

--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -34,8 +34,9 @@ annotations, named subdiagrams, and more.
 
 Development proceeds slowly (since most of the main developers are
 busy with other things) but passionately.  The upcoming 0.6 release
-didn't quite make it out the door in time for the HCAR deadline, but
-look for a new release soon!  New features in 0.6 include:
+didn't make it out the door in time for the HCAR deadline, but look
+for a new release in early December!  New features in 0.6 will
+include:
 
 \begin{itemize}
 \item All diagrams-related repositories have now moved to github, to
@@ -57,12 +58,26 @@ look for a new release soon!  New features in 0.6 include:
 \item Many other small improvements, new features, and bug fixes.
 \end{itemize}
 
-Other exciting things:
+\begin{center}
+\includegraphics[width=0.5\textwidth]{html/PythagoreanTree.png}
+\end{center}
 
-XXX mention diagrams-builder, blog post about it, etc.
+Some other exciting recent things in diagrams-land:
 
-* monoid-pearl paper. link to paper and video.
+\begin{itemize}
+\item The \texttt{diagrams-builder} package allows rendering diagrams
+  dynamically, at run time, and has been used to support things like
+  inline diagrams code in blog posts and \LaTeX\ documents (see
+  \url{https://byorgey.wordpress.com/2012/08/28/creating-documents-with-embedded-diagrams/}).
+\item Brent recently presented a paper at the Haskell Symposium,
+  \emph{Monoids: Theme and Variations}, based on diagrams and
+  motivating the design of some of its core data structures:
+  \url{http://www.cis.upenn.edu/~byorgey/pub/monoid-pearl.pdf}.
+\end{itemize}
 
+\begin{center}
+\includegraphics[width=0.7\textwidth]{html/FibCalls.png}
+\end{center}
 
 \subsubsection*{Contributing}
 
@@ -75,10 +90,8 @@ diagrams can be intimidating to would-be users and contributors;
 however, we are actively working on new documentation and resources to
 help combat this.  For more information on ways to contribute and how
 to get started, see the Contributing page on the diagrams wiki: 
-\url{http://haskell.org/haskellwiki/Diagrams/Contributing}
+\url{http://haskell.org/haskellwiki/Diagrams/Contributing}.
 
-XXX use different/additional sample images.  What do we have that's
-new and exciting?
 %**<img width=500 src="./triangular-numbers.jpg">
 %*ignore
 \begin{center}
@@ -106,6 +119,10 @@ application for interactively developing diagrams and animations.
 \item \url{http://projects.haskell.org/diagrams/gallery.html}
 \item \url{http://haskell.org/haskellwiki/Diagrams}
 \item \url{http://github.com/diagrams}
+\item
+  \url{https://byorgey.wordpress.com/2012/08/28/creating-documents-with-embedded-diagrams/}
+\item \url{http://www.cis.upenn.edu/~byorgey/pub/monoid-pearl.pdf}
+\item \url{http://www.youtube.com/watch?v=X-8NCkD2vOw}
 \end{compactitem}
 \end{hcarentry}
 
