improve HCAR entry [ci skip]

--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -108,10 +108,11 @@ A native SVG backend is under active development and almost ready to
 be used as a drop-in replacement for the cairo backend.  The cairo
 backend will still be supported, but SVG will replace cairo as the
 default ``out-of-the-box'' backend, vastly simplifying installation
-for new useres. Other plans for the near future include support for
-drawing arrows.  Longer-term plans include better support for drawing
-curved paths, support for interactive diagrams, and a custom Gtk
-application for interactively developing diagrams and animations.
+for new useres. Other features planned for the near future include
+better arrow support, multi-page diagrams, and gradients.  Longer-term
+plans include a richer API for drawing curved paths, interactive
+diagrams, and a custom Gtk application for interactively developing
+diagrams and animations.
 
 \FurtherReading
 \begin{compactitem}
