HCAR file from Janis [ci skip]

--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -1,6 +1,6 @@
 % diagrams-Bd.tex
 \begin{hcarentry}[updated]{diagrams}
-\report{Brent Yorgey}%05/12
+\report{Brent Yorgey}%11/12
 \status{active development}
 \participants{Jan Bracker, Andy Gill, Chris Mears, Michael Sloan, Ryan Yates}
 \makeheader
@@ -31,7 +31,6 @@ busy with other things) but passionately.  The upcoming 0.6 release
 didn't make it out the door in time for the HCAR deadline, but look
 for a new release in early December!  New features in 0.6 will
 include:
-
 \begin{itemize}
 \item All diagrams-related repositories have now moved to github, to
   foster increased contribution.
@@ -52,12 +51,14 @@ include:
 \item Many other small improvements, new features, and bug fixes.
 \end{itemize}
 
+%**<img width=350 src="./PythagoreanTree.png">
+%*ignore
 \begin{center}
-\includegraphics[width=0.5\textwidth]{html/PythagoreanTree.png}
+\includegraphics[width=0.235\textwidth]{html/PythagoreanTree.png}
 \end{center}
+%*endignore
 
 Some other exciting recent things in diagrams-land:
-
 \begin{itemize}
 \item The \texttt{diagrams-builder} package allows rendering diagrams
   dynamically, at run time, and has been used to support things like
@@ -69,9 +70,12 @@ Some other exciting recent things in diagrams-land:
   \url{http://www.cis.upenn.edu/~byorgey/pub/monoid-pearl.pdf}.
 \end{itemize}
 
+%**<img width=350 src="./FibCalls.png">
+%*ignore
 \begin{center}
-\includegraphics[width=0.7\textwidth]{html/FibCalls.png}
+\includegraphics[width=0.33\textwidth]{html/FibCalls.png}
 \end{center}
+%*endignore
 
 \subsubsection*{Contributing}
 
