add a release checklist item [ci skip]

--- a/release/release.org
+++ b/release/release.org
@@ -85,6 +85,7 @@
     + [X] add "closable" to list of type classes
     + [ ] add "types" section
     + [ ] other updates as needed, see especially intro etc.
+  + [ ] clean up ScaleInv and add to manual
   + [X] fix build bug with manual+web: image links on the manual page
         are to .make/...  Need to make them relative to root.
   + [ ] add boundaryFrom or something like that? (see migration page)
