--- a/release/release.org
+++ b/release/release.org
@@ -92,22 +92,20 @@
         are to .make/...  Need to make them relative to root.
   + [ ] add boundaryFrom or something like that? (see migration page)
   + [X] set up test/comparison framework
-  + [ ] fix/decide what to do re: SVG transparent text
-  + [ ] convert force-layout to lens and release
+  + [X] fix/decide what to do re: SVG transparent text
+  + [X] convert force-layout to lens and release
   + [ ] build API docs
+  + [ ] switch CHANGES files to use Markdown format
   + [-] update CHANGES files and release info on website
-    + [ ] diagrams-core
-    + [ ] diagrams-lib
-    + [ ] diagrams-cairo
-    + [ ] diagrams-svg
+    + [X] diagrams-core
+    + [X] diagrams-lib
+    + [X] diagrams-cairo
+    + [X] diagrams-svg
     + [X] diagrams-contrib
+    + [X] diagrams-gtk
     + [ ] website
-  + [ ] postscript backend
-    - [ ] add to 'diagrams' package (with flag)
-    - [ ] add to 'builder'
-    - [ ] write about it in user manual
   + [ ] 0.5 -> 0.6 migration page on wiki
-  + [ ] test building with new vector-space (if it's released)
+  + [X] test building with new vector-space (if it's released)
   + [ ] test build:
     - [ ] make testing script -- use cabal-dev -w -j ?
     - [ ] ghc 7.0.4
@@ -127,6 +125,8 @@
     + [ ] link to gallery (email)
     + [ ] include some examples (blog)
     + [ ] say where/how to get involved
+  + [ ] update LICENSE files/lists of contributors
+    + [ ] put list of contributors on website?
   + [ ] add release date to all CHANGES files
     + [ ] core
     + [ ] lib
@@ -155,8 +155,12 @@
       - [ ] haskell-cafe
       - [ ] haskell-art
 ** put off
-    + [ ] re-export core functions intended for end users from
-          diagrams-lib
+  + [ ] re-export core functions intended for end users from
+        diagrams-lib
+  + [ ] postscript backend
+    - [ ] add to 'diagrams' package (with flag)
+    - [ ] add to 'builder'
+    - [ ] write about it in user manual
 * Planning for release of version 0.5
 
   + [X] update diagrams package to depend on new versions of -core,
