make note to update projects/backends wiki page [ci skip]

--- a/notes/working.org
+++ b/notes/working.org
@@ -8,6 +8,8 @@
   + incorporate Jan Bracker R2 generalization
   + write about diagrams-core in user manual
 
+  + update projects/backends wiki page
+
 * Someday projects
 
   + envelope/trace memoization
